--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -6,10 +6,12 @@ tags: [aplicaciones web, smr, teoría, css]
 img_path: /assets/img/css/
 ---
 
+{:.section}
 ## Introducción
 
 En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
 
+{:.section}
 ## ¿Qué es CSS?
 
 - Cascading Style Sheets.
