--- a/_posts/2024-11-17-audio-web.md
+++ b/_posts/2024-11-17-audio-web.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/audio-web/
 ---
 
+{:.section}
 ## Introducción
 
 Recuerda que toda la información transmitida a través de Internet es digital, formada por cadenas de unos y ceros por lo que, la señal sonora, que es analógica, debe convertirse mediante un proceso de codificación a binario.
@@ -42,6 +43,7 @@ Los límites de la audición humana están entre los 20 y los 20.000 Hz y para c
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Sr8d6nnsKqA?si=l__UeaUTxq6HiFo-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+{:.section}
 ## Uso de sonido en la Web
 
 Cuando estamos diseñando un sitio Web, tenemos que tomar ciertas decisiones referentes al sonido que queremos incorporar.
@@ -52,6 +54,7 @@ Existen varias formas de incorporar sonido a una web:
 1. Enlaces ancla/anchor. Descarga directa.
 1. Incrustar un reproductor.
 
+{:.section}
 ## Formatos de sonido
 
 En este apartado veremos algunos formatos de sonido que se emplean en la Web, haciendo referencia a las características propias de cada formato:
@@ -87,12 +90,14 @@ Falso
   </div>
 </details>
 
+{:.section}
 ## Conversiones de formatos
 
 A la hora de elegir un formato de sonido, debemos tener en cuenta el uso que se le va a dar a ese sonido. Así, si la Web que estamos diseñando es para una emisora de radio que quiere transmitir los programas en tiempo real, tendremos que optar por formatos del tipo de Windows Media, mientras que si es para la venta de sonido con calidad CD optaremos por MP3 o AAC.
 
 Si necesitamos convertir un formato en otro existen infinidad de programas para realizar este tipo de conversiones. Uno de ellos es AVS Video Converter. En el artículo [¿Cómo convertir entre formatos de audio?](https://www.avs4you.com/es/guides/How-to-convert-between-audio-formats.aspx) se explica como usar este programa. Otra alternativa de software libre que puedes usar es Audacity.
 
+{:.section}
 ## Exportación e importación de sonido
 
 Hay otros formatos contenedores:
@@ -149,6 +154,7 @@ Y una lista de programas y webs con los que puedes cambiar audios de formato:
 - <https://ffmpeg.org/download.html>
 - <http://convertio.co/>
 
+{:.section}
 ## Cómo conseguir sonidos
 
 (Voluntario) Mira el siguiente vídeo:
