--- a/_posts/2024-11-18-video-web.md
+++ b/_posts/2024-11-18-video-web.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/video-web/
 ---
 
+{:.section}
 ## Introducción
 
 El vídeo digital es un tipo de sistema de grabación de vídeo que funciona usando una representación digital de la señal de vídeo, en vez de una representación analógica.
@@ -83,6 +84,7 @@ Si.
   </div>
 </details>
 
+{:.section}
 ## Uso de vídeo en la Web
 
 Cuando decidimos incorporar un vídeo a nuestra Web, debemos tener en cuenta que este tipo de archivos almacenan gran cantidad de información por cada segundo.
@@ -96,6 +98,7 @@ Para añadir un vídeo a nuestra web lo podemos hacer de dos formas:
 
 En la web de Referencia de Mozilla tienes el artículo [Contenido de audio y video](https://developer.mozilla.org/es/docs/Learn/HTML/Multimedia_and_embedding/Video_and_audio_content) donde puedes aprender cómo se puede añadir elementos de audio y video en una web.
 
+{:.section}
 ## Formatos de vídeo
 
 En este apartado, haremos un resumen de las principales características de los formatos de vídeo más usados en la Web:
@@ -147,6 +150,7 @@ No. En la Web basta normalmente con una tasa de fotogramas de 10 a 15 fps e incl
   </div>
 </details>
 
+{:.section}
 ## Conversiones de formatos
 
 Existen multitud de programas que realizan la conversión entre los diferentes formatos de vídeo. Algunos de ellos son:
@@ -166,6 +170,7 @@ Con una conversión podemos reducir notoriamente el tamaño de un vídeo. A cont
 | 3      | Tasa de fotogramas                  | 30 fps    | 15 fps    |
 | 4      | Formato                             | AVI       | 3GP       |
 
+{:.section}
 ## Edición y montaje de vídeos
 
 Los primeros pasos para realizar un vídeo para la Web coinciden con los pasos para realizar cualquier vídeo:
@@ -187,6 +192,7 @@ El peso total del clip de vídeo que dependerá del tamaño y número de fotogra
   </div>
 </details>
 
+{:.section}
 ## Programas para grabar vídeos
 
 Si no sabes ninguna herramienta con la que grabar vídeos puedes usar:
@@ -198,6 +204,7 @@ Si no sabes ninguna herramienta con la que grabar vídeos puedes usar:
 - **SimpleScreenRecorder**: Herramienta sencilla para grabación de videos para GNU Linux.
 - **Movavi Screen Recorder**: Herramienta para grabar videos.
 
+{:.section}
 ## Programas para editar vídeos
 
 - **Microsoft Clipchamp**: Herramienta sencilla para Windows. Software propietario.
@@ -212,6 +219,7 @@ Si no sabes ninguna herramienta con la que grabar vídeos puedes usar:
 - **Filmora**: Sencillo.
 - **Shotcut**: Gratuito.
 
+{:.section}
 ## Webs para descargar vídeos
 
 - <https://archive.org/details/movies>
