--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -3,7 +3,7 @@ title: "Representación de colores"
 date: 2024-09-05 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Web, Diseño de Interfaces Web]
 tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de aplicaciones web, diseño de interfaces web, diw]
-img_path: /assets/img/planificacion-interfaces-graficas/
+img_path: /assets/img/colores/
 ---
 
 {:.section}
