--- a/_posts/2024-09-04-gestalt.md
+++ b/_posts/2024-09-04-gestalt.md
@@ -25,7 +25,7 @@ La construcción de mensajes visuales conlleva siempre una intención comunicati
   </div>
 </details>
 
-![alt text](logoCarrefour.jpg)
+![Logo de Carrefour](logoCarrefour.jpg)
 _Logo de Carrefour_
 
 {:.question}
@@ -56,13 +56,15 @@ En los subapartados siguientes veremos estos principios y su aplicación en el d
 
 Nuestra mente tiende a agrupar los elementos en función de la distancia que hay entre ellos.
 
-![alt text](principioDeProximidad.png)
+![Principio de proximidad](principioDeProximidad.png)
+_Principio de proximidad_
 
 En la imagen nuestra mente agrupa los elementos formando 3 columnas, 4 filas y 6 bloques.
 
-Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de una de las páginas del antiguo sitio de la Comunidad de Madrid. En esta imagen se han agrupado, dentro de dos rectángulos azules, aquellos elementos que, siendo todos enlaces a otras páginas del sitio y, presentando el mismo formato, se perciben como bloques distintos por estar sus elementos más próximos entre sí. 
+Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de una de las páginas del antiguo sitio de la Comunidad de Madrid. En esta imagen se han agrupado, dentro de dos rectángulos azules, aquellos elementos que, siendo todos enlaces a otras páginas del sitio y, presentando el mismo formato, se perciben como bloques distintos por estar sus elementos más próximos entre sí.
 
-![alt text](principioDeProximidadCM.png)
+![Portal de la Comunidad de Madrid](principioDeProximidadCM.png)
+_Portal de la Comunidad de Madrid_
 
 La cercanía de los elementos del mismo tipo es percibida por el usuario como si fueran una única unidad. Y, la distancia que hay entre los dos bloques, es suficiente para que el usuario los perciba como elementos que pertenecen a diferentes categorías de información.
 
@@ -73,13 +75,15 @@ Agrupamos todo lo que nos rodea por sus características similares. A las person
 
 Nuestra mente tiende a agrupar aquellos elementos que son similares en su aspecto visual: forma, color, tamaño, etcétera
 
-![alt text](principioDeSemejanza.png)
+![Principio de semejanza](principioDeSemejanza.png)
+_Principio de semejanza_
 
 Nuestra mente no percibe los  36 elementos de la parte izquierda de la imagen. Percibe  3 filas de elementos amarillos y  3 filas de elementos marrones. En la parte central de la imagen vemos las líneas en diagonal formadas por elementos con la misma forma. En la parte de la derecha de la imagen distinguimos  3 bloques de rectángulos, el bloque superior horizontal y dos bloques paralelos dispuestos verticalmente.
 
 Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de una de las páginas del antiguo sitio de la Xunta de Galicia. En esta imagen se han agrupado dentro de unos rectángulos azules aquellos elementos que, siendo todos enlaces a diferentes páginas del sitio, son similares entre sí tanto en forma como en tamaño.
 
-![alt text](principioDeSemejanzaEjemplo.png)
+![Ejemplo del principio de semejanza](principioDeSemejanzaEjemplo.png)
+_Ejemplo del principio de semejanza_
 
 {:.subsection}
 ### Principios de simetría y de continuidad
@@ -89,26 +93,30 @@ Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de una
 
 Nuestra mente tiende a percibir como un único elemento aquellos que están dispuestos simétricamente.
 
-![alt text](principioDeSimetria.png)
+![Principio de simetría](principioDeSimetria.png)
+_Principio de simetría_
 
 En el dibujo no vemos el símbolo © del Copyright que está colocado cuatro veces pero girándolo de modo que la letra C de cada uno de los símbolos está mirando al centro. Lo que vemos son los pétalos de una flor.
 
 Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de la página de la Tienda On-line de Bornay Desserts. En esta imagen se han separado mediante una línea vertical de color azul las dos zonas simétricas. En la zona de la izquierda el texto está alineado por su derecha, mientras que en la zona de la derecha, el texto está alineado por su izquierda. Desde lejos parece un único elemento centrado en la imagen. 
 
-![alt text](principioDeSimetriaEjemplo.png)
+![Ejemplo de principio de simetría](principioDeSimetriaEjemplo.png)
+_Ejemplo de principio de simetría_
 
 {:.subsubsection}
 #### Principio de continuidad
 
 Nuestra mente tiende a percibir los elementos continuos aunque estén interrumpidos entre sí.
 
-![alt text](principioDeContinuidad.png)
+![Principio de continuidad](principioDeContinuidad.png)
+_Principio de continuidad_
 
 En la imagen vemos a la izquierda un grupo de ovejas que avanzan por un camino. Las ovejas que van delante no se ven claramente pero nosotros las percibimos igualmente por efecto del principio de continuidad. En la parte derecha de la imagen no vemos la forma de aleta de delfín de color azul que se ha repetido ocho veces. Por efecto del principio de continuidad lo que vemos es una forma con ondulaciones sobre las que está escrito el texto “abcd”.
 
 Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de la parte central de la página de la Tienda On-line de Bornay Desserts. En esta figura se han separado mediante una línea vertical de color azul la imagen central original con su hueco central, de la imagen de lo que el usuario percibe destacando con color azul la letra B completa y con color granate el hueco de la línea central. El usuario percibe estos elementos unidos aunque estén interrumpidos.
 
-![alt text](principioDeContinuidadEjemplo.png)
+![Ejemplo de principio de continuidad](principioDeContinuidadEjemplo.png)
+_Ejemplo de principio de continuidad_
 
 {:.subsection}
 ### Principios de cierre y de área o tamaño relativo
@@ -118,50 +126,59 @@ Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de la 
 
 Nuestra mente tiende a percibir figuras completas o cerradas a partir de contornos, incluso aunque éstos estén incompletos.
 
-![alt text](principioDeCierre.png)
+![Principio de cierre](principioDeCierre.png)
+_Principio de cierre_
 
 Un ejemplo de la aplicación de este principio lo puedes ver en las tres zonas enmarcadas con un rectángulo grisáceo en la parte derecha de la imagen. La parte izquierda se corresponde con el aspecto original de la página web de la empresa Enesa Logística S.L.
 
-![alt text](principioDeCierreEjemplo.png)
+![Ejemplo de Principio de cierre](principioDeCierreEjemplo.png)
+_Ejemplo de Principio de cierre_
 
 {:.subsubsection}
 #### Principio de área o tamaño relativo
 
 Nuestra mente tiende a percibir como objeto el más pequeño de dos objetos que se superponen, percibiendo el objeto de mayor tamaño como fondo.
 
-![alt text](principioDeArea.png)
+![Principio de área o tamaño relativo](principioDeArea.png)
+_Principio de área o tamaño relativo_
 
 La hexágono se percibe como el objeto principal de la imagen y el cuadrado azul se percibe como el fondo sobre el cual se encuentra el hexágono.
 
 Un ejemplo de la aplicación de este principio lo puedes ver en las zonas enmarcadas mediante círculos en la parte derecha de la imagen. La circunferencia roja representa el fondo y los círculos pequeños son los elementos de interés. La parte izquierda de la imagen se corresponde con el aspecto original de la página web de la empresa Golfitness style Donde se pueden ver las imágenes que están debajo de los círculo y que se corresponden con la zona de navegación de la página.
 
-![alt text](principioDeAreaEjemplo.png)
+![Ejemplo de principio de área o tamaño relativo](principioDeAreaEjemplo.png)
+_Ejemplo de principio de área o tamaño relativo_
 
 {:.subsection}
 ### Principio de figura-fondo
 
 Nuestra mente tiende a percibir ciertos elementos como figuras, con forma y borde, destacándolos del resto de los objetos que los envuelven (fondo).
 
-![alt text](principioDeFigura.png)
+![Principio de figura-fondo](principioDeFigura.png)
+_Principio de figura-fondo_
 
 En la imagen distinguimos el triángulo de color claro como una forma sobre un rectángulo de color azul que está de fondo, debido a que asimilamos mejor la forma triangular que la poligonal. Si esto no fuera así, estaríamos viendo un triangulo a la izquierda y una forma poligonal a la derecha.
 
 Un ejemplo de la aplicación de principios es la imagen de la página de ISAIAH FRAZIER ARTISTIC DESIGNS. En ella podemos ver el corazón como objeto principal situado sobre un fondo de rectángulos de colores.
 
-![alt text](principioDeFiguraEjemplo.png)
+![Ejemplo de Principio de figura-fondo](principioDeFiguraEjemplo.png)
+_Ejemplo de Principio de figura-fondo_
 
 {:.subsection}
 ### Ley de simplicidad, pregnancia o buena forma
 
 Nuestra mente tiende a percibir las formas más simples, facilitando así su recuerdo. Es un principio de organización de los elementos que componen una experiencia perceptiva, por el cual se reducen las ambigüedades o efectos distorsionadores, permitiéndonos centrarnos en un objeto separándolo del entorno con facilidad.
 
-![alt text](leyDeSimplicidad1.png)
+![Ley de simplicidad](leyDeSimplicidad1.png)
+_Ley de simplicidad_
 
-![alt text](leyDeSimplicidad2.png)
+![Ley de simplicidad](leyDeSimplicidad2.png)
+_Ley de simplicidad_
 
 La misma imagen que proponíamos como ejemplo del principio figura-fondo nos vale como aplicación práctica de otros principios. Distinguimos en la fila superior los elementos que forman parte del sistema de navegación por la tonalidad más oscura de los colores (principio de semejanza). También hay agrupación de elementos en distintos rectángulos con fondo blanco (principio de proximidad). Y, vemos rectángulos completos, aún cuando no lo están por estar recortados con la silueta del corazón blanco del centro (principio de cierre).
 
-![alt text](principioDeFiguraEjemplo.png)
+![Ejemplo de ley de simplicidad](principioDeFiguraEjemplo.png)
+_Ejemplo de ley de simplicidad_
 
 ## Bibliografía
 
