--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -65,12 +65,12 @@ Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
 
 Necesitas más colores de los que piensas para no hacer cosas así:
 
-![alt text](colorMal.png)
+![Ejemplo de como NO usar el color](colorMal.png)
 _Ejemplo de como NO usar el color_
 
 sino para hacer cosas así:
 
-![alt text](coloresBien.png)
+![Ejemplo de como SI usar el color](coloresBien.png)
 _Ejemplo de como SI usar el color_
 
 La gama de blancos y grises la usas para hacer las cosas muy claras u oscuras. La gama del color principal obviamente la usas para casi todo, mientras que la gama del color alternativo la usas para destacar algo. Por último, los colores rojo, verde, amarillo, etc, son para cosas concretas que necesitan ese color. Por ejemplo para avisar del borrado de algo usar el rojo.
@@ -80,7 +80,7 @@ La gama de blancos y grises la usas para hacer las cosas muy claras u oscuras. L
 
 Las cosas que están "encima" debe ser más claras que las que están abajo.
 
-![alt text](luzBienMal.png)
+![De izquierda a derecha, ejemplo de como NO usar la luz y de como SI usar la luz](luzBienMal.png)
 _De izquierda a derecha, ejemplo de como NO usar la luz y de como SI usar la luz_
 
 {:.section}
@@ -88,12 +88,12 @@ _De izquierda a derecha, ejemplo de como NO usar la luz y de como SI usar la luz
 
 Al hacer un interfaz de usuario, jugar con dos colores que hagan contraste:
 
-![alt text](contrasteWeb.png)
+![Web con buen uso del contraste](contrasteWeb.png)
 _Web con buen uso del contraste_
 
 En la siguiente imagen se pueden ver la rueda de colores que hacen contraste:
 
-![alt text](warmColdColors.png)
+![Rueda de colores según su calidez](warmColdColors.png)
 _Rueda de colores según su calidez_
 
 {:.section}
@@ -109,7 +109,7 @@ Video voluntario:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PElLB0pm5SQ?si=3fY5MW0Qyg3nl8_i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-![alt text](ejemploSistemaRGB.png)
+![Ejemplo con Color Scheme Designer](ejemploSistemaRGB.png)
 _Ejemplo con Color Scheme Designer_
 
 En la imagen anterior puedes ver las diferentes informaciones suministradas por la página web sobre esquemas de colores de diseño cuyo enlace tienes disponible en la página anterior de este mismo apartado. Se ha elegido en el sistema RGB una tríada compuesta por un color primario: el azul y los equidistantes a su color complementario. En la parte inferior de la imagen puedes ver los códigos hexadecimales correspondientes a cada combinación de color y, en la parte de la derecha de la imagen, sobre un fondo blanco, puedes ver la equivalencia en decimal de estos códigos hexadecimales.
@@ -154,7 +154,7 @@ Hay monitores que sólo permiten visualizar 256 colores. Hay navegadores que pos
 
 Los colores seguros son los que se forman con las combinaciones de los tres colores rojo, verde y azul pero sólo con los valores hexadecimales: 00, 33, 66, 99, CC y FF. Son seis grados distintos de cada color y por eso hay 216 colores en total ya que 216 es el resultado de multiplicar 6 x 6 x 6.
 
-![alt text](coloresSegurosEjemplo.png)
+![Ejemplo de colores seguros](coloresSegurosEjemplo.png)
 _Ejemplo de colores seguros_
 
 La imagen se corresponde a la misma elección que vimos en la imagen de la página anterior de este mismo apartado, pero seleccionando esta vez los colores seguros de la Web en los enlaces de la barra superior izquierda. Puedes comprobar que todos los códigos hexadecimales se corresponden con los mencionados en el párrafo anterior.
