--- a/_posts/2024-11-18-video-web.md
+++ b/_posts/2024-11-18-video-web.md
@@ -21,7 +21,7 @@ toda la información que se transmite a través de Internet es digital, es decir
 
 Estas características se encuentran señaladas en las propiedades de un archivo de video como se puede ver en la siguiente figura:
 
-![alt text](propiedadesVideo.png)
+![Propiedades de un archivo de vídeo](propiedadesVideo.png)
 _Propiedades de un archivo de vídeo_
 
 <details class="card mb-2">
