--- a/_posts/2025-02-15-tarea-dom.md
+++ b/_posts/2025-02-15-tarea-dom.md
@@ -6,9 +6,6 @@ tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, d
 img_path: /assets/img/tarea-dom/
 ---
 
-> Artículo en construcción.
-{:.prompt-warning}
-
 ## Información sobre la tarea
 
 La entrega será en formato vídeo (preferiblemente MP4). Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
@@ -21,10 +18,15 @@ RA6. Desarrolla aplicaciones web analizando y aplicando las características del
 
 ## Actividades
 
-Realiza las siguientes actividades.
+Realiza SOLO UNA de las siguientes actividades y prepara un vídeo de aproximadamente 2 minutos explicando CON TU VOZ los siguientes puntos:
+
+1. Explica en que partes del código has accedido al DOM. Indica cuándo y cómo creas, modificadas o eliminas nodos del DOM.
+1. Indica si has añadido manejadores de eventos y para qué los has necesitado.
+1. Indica en qué navegadores has probado la aplicación.
+1. Explica cómo has estructurado tú código para que el contenido, el aspecto y el comportamiento de tu aplicación estén separados.
 
 {:.activity}
-### (Voluntaria) Tablero de dibujo
+### Tablero de dibujo
 
 Haz una aplicación en JavaScript que simule un pequeño tablero de dibujo. Para ello tendrás que dibujar un tablero de 30 celdas x 30 celdas con cada celda de ancho 10 px y alto 10 px. Para realizar el tablero de dibujo tendrás que emplear obligatoriamente los métodos de creación de nodos del DOM. Una vez generado el tablero lo meterás dentro del `div` con `id="zonadibujo"`.
 
@@ -44,6 +46,102 @@ La forma de funcionamiento de la aplicación será la siguiente:
 ![alt text](tableroDeDibujo.png)
 _Captura de cómo debería quedar la aplicación_
 
+{:.activity}
+### Lista de tareas
+
+Haz una aplicación de tareas que cumpla con los siguientes requisitos funcionales:
+
+1. El usuario puede crear una tarea.
+1. El usuario puede borrar una tarea.
+1. El usuario puede editar una tarea.
+1. El sistema almacenará las tareas de manera persistente usando el `localStorage`, de modo que permanezcan accesibles incluso después de cerrar y reabrir el navegador.
+1. El usuario puede marcar una tarea como completada.
+
+{:.activity}
+### Reloj analógico
+
+Haz un reloj que muestre la hora actual con manecilla de horas y minutos.
+
+1. Deberás hacer uso de `setInterval` o `setTimeout` para actualizaciones periódicas.
+1. (Opcional) Puedes añadir animaciones para mover las agujas del reloj.
+1. (Opcional) Puedes añadir la manecilla de los segundos.
+1. (Opcional) Puedes añadir un botón para cambiar los colores del reloj.
+
+{:.activity}
+### La palabra del dia
+
+Haz el juego de [Wordle](https://lapalabradeldia.com/) que consiste en adivinar una palabra oculta en 6 intentos.
+
+1. El usuario solo tiene 6 intentos para adivinar la palabra.
+1. Después de cada intento el color de las casillas cambia para mostrar qué tan cerca estás de acertar la palabra de la siguiente forma:
+   1. VERDE significa que la letra está en la palabra y en la posición CORRECTA.
+   1. AMARILLO significa que la letra letra está presente en la palabra pero en la posición INCORRECTA.
+   1. GRIS significa que la letra letra NO está presente en la palabra.
+1. (Opcional) Cada intento debe ser una palabra válida.
+1. (Opcional) La palabra que aparece es aleatoria.
+
+{:.activity}
+### Calculadora científica
+
+Haz una calculadora científica que cumpla con los siguientes requisitos:
+
+1. La calculadora debe permitir hacer sumas, restas, multiplicaciones y divisiones.
+1. La calculadora debe permitir hacer raíces cuadradas y potencias.
+1. La calculadora debe mostrar un error cuando se intente dividir entre 0.
+1. La calculadora no debe aceptar entradas que no sean números.
+
+{:.activity}
+### Quien es quien
+
+Desarrolla un tablero de quien es quien interactivo. La idea principal es que se pueda jugar de la manera tradicional en dos ordenadores distintos.
+
+En [este enlace](https://padresfrikis.com/como-se-juega-a-quien-es-quien/) puedes ver el funcionamiento del juego.
+
+{:.activity}
+### Hundir la flota
+
+Desarrolla un tablero de hundir la flota interactivo. La idea principal es que se pueda jugar de la manera tradicional en dos ordenadores distintos.
+
+En [este enlace](https://www.cope.es/actualidad/vivir/juegos-tradicionales/noticias/juegos-para-aislamiento-hundir-flota-20200413_678739#:~:text=Las%20reglas%20son%20muy%20f%C3%A1ciles,oponente%20seg%C3%BAn%20los%20vayas%20adivinando.) puedes ver el funcionamiento del juego.
+
+{:.activity}
+### Buscaminas
+
+Desarrolla el juego del buscaminas sin expansiones automáticas.
+
+En [este enlace](https://buscaminas.eu/reglas) tienes un ejemplo de juego junto a sus reglas.
+
+{:.activity}
+### Ahorcado
+
+Desarrolla el juego del ahorcado.
+
+En [este enlace](https://lapalabradeldia.com/) tienes un ejemplo de juego junto a sus reglas.
+
+{:.activity}
+### Sudoku
+
+Desarrolla el juego del sudoku y que con un botón compruebe si es correcta tu solución o no.
+
+En [este enlace](https://sudoku.com/es/como-jugar/reglas-de-sudoku-para-principiantes/) tienes un ejemplo de juego junto a sus reglas.
+
+{:.activity}
+### Bingo
+
+Desarrolla un pequeño juego del Bingo con un solo cartón.
+
+1. En el bombo hay 90 bolas (del 1 al 90, inclusive).
+1. El jugador tiene su propio cartón con 15 números aleatorios.
+1. Al pulsar en el bombo central, empezaremos a sacar números y comprobar si existen en los cartones.
+1. De existir, se tachan y esperamos a que el usuario vuelva a pulsar para sacar un nuevo número.
+1. En la parte inferior, iremos añadiendo los números extraídos.
+1. Cuando se tachen todos los números el juego finaliza.
+
+{:.activity}
+### Otro cosa
+
+Si quieres hacer otro juego en HTML, CSS y JavaScript deberá ser aprobado por el profesor.
+
 ## Dame tu feedback...
 
 <div class="strawpoll-embed" id="strawpoll_NoZrzDbXpZ3" style="height: 644px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_NoZrzDbXpZ3" src="https://strawpoll.com/embed/NoZrzDbXpZ3" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
@@ -52,5 +150,5 @@ _Captura de cómo debería quedar la aplicación_
 
 ## Bibliografía
 
-- <https://jsfiddle.net/xxjcaxx/L2q8vzgn/10/>
+- 
 - 
