--- a/_posts/2025-02-15-tarea-dom.md
+++ b/_posts/2025-02-15-tarea-dom.md
@@ -12,7 +12,7 @@ La entrega será en formato vídeo (preferiblemente MP4). Leer [Entrega y presen
 
 La tarea se calificará con una nota de APTO (10) o NO APTO (0).
 
-Duración actividades obligatorias: X horas.
+Duración actividades obligatorias: 5 horas.
 
 RA6. Desarrolla aplicaciones web analizando y aplicando las características del modelo de objetos del documento.
 
@@ -25,10 +25,13 @@ Realiza SOLO UNA de las siguientes actividades y prepara un vídeo de aproximada
 1. Indica en qué navegadores has probado la aplicación.
 1. Explica cómo has estructurado tú código para que el contenido, el aspecto y el comportamiento de tu aplicación estén separados.
 
-{:.activity}
-### Tablero de dibujo
+> Todos los proyectos deben tener al menos un fichero CSS con estilos definidos, un fichero javascript con código que modifique el DOM y un documento HTML.
+{:.prompt-info}
 
-Haz una aplicación en JavaScript que simule un pequeño tablero de dibujo. Para ello tendrás que dibujar un tablero de 30 celdas x 30 celdas con cada celda de ancho 10 px y alto 10 px. Para realizar el tablero de dibujo tendrás que emplear obligatoriamente los métodos de creación de nodos del DOM. Una vez generado el tablero lo meterás dentro del `div` con `id="zonadibujo"`.
+{:.activity}
+### Editor de pixel art
+
+Haz una aplicación en JavaScript que simule un pequeño editor de pixel art. Para ello tendrás que dibujar un tablero de 30 celdas x 30 celdas con cada celda de ancho 10 px y alto 10 px. Para realizar el tablero de dibujo tendrás que emplear obligatoriamente los métodos de creación de nodos del DOM. Una vez generado el tablero lo meterás dentro del `div` con `id="zonadibujo"`.
 
 Se te facilitará un fichero [index.html](/assets/img/tarea-dom/index.html) y un fichero [estilos.css](/assets/img/tarea-dom/estilos.css) con los estilos que tendrás que utilizar. La programación de la aplicación JavaScript la tendrás que realizar en un fichero .js adicional.
 
@@ -138,9 +141,9 @@ Desarrolla un pequeño juego del Bingo con un solo cartón.
 1. Cuando se tachen todos los números el juego finaliza.
 
 {:.activity}
-### Otro cosa
+### Otro aplicación o juego
 
-Si quieres hacer otro juego en HTML, CSS y JavaScript deberá ser aprobado por el profesor.
+Si quieres hacer otra aplicación u otro juego en HTML, CSS y JavaScript deberá ser aprobado por el profesor.
 
 ## Dame tu feedback...
 
@@ -150,5 +153,5 @@ Si quieres hacer otro juego en HTML, CSS y JavaScript deberá ser aprobado por e
 
 ## Bibliografía
 
-- 
-- 
+- [Ministerio de Educación y Formación Profesional](https://www.educacionyfp.gob.es/portada.html)
+- <https://lenguajejs.com/retos/nivel-medio/bingo>
