--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -21,7 +21,7 @@ img_path: /assets/img/cookies/
 {:.section}
 ## Introducción
 
-Las cookies son unos pequeños ficheros, que se escribirán en una carpeta determinada en el ordenador del cliente. Estos ficheros te pueden permitir el grabar cierta información y que permanezca entre diferentes sesiones de trabajo de un usuario.
+Las cookies son pequeños fragmentos de datos almacenados en el navegador del usuario. Son útiles para almacenar información persistente que debe enviarse con cada solicitud HTTP al servidor, como sesiones de usuario.
 
 Un uso muy típico de las cookies es usarlas para crear un sistema de carrito de la compra para tiendas online. De esta forma, se pueden almacenar productos que el usuario va seleccionando y cuando se realiza el pago se mostrará el total a pagar, junto con el listado de productos.
 
@@ -61,7 +61,7 @@ Un fichero de cookies es un fichero de texto. El formato de almacenamiento de lo
 {:.question}
 ¿Cómo se pueden ver las cookies desde el navegador?
 
-> **¡Las cookies son específicas al dominio!** En otras palabras, si un dominio crea una cookie, otro dominio no podrá acceder a ella a través del navegador. La razón de ello es que muchas veces podremos almacenar datos importantes como usuarios/contraseñas en las cookies, y no queremos que otros dominios puedan consultarlos. La mayor parte de las veces, cuando almacenamos datos de este tipo, estarán encriptados dentro de la cookie.
+> **¡Las cookies son específicas al dominio!** En otras palabras, si un dominio (google.com) crea una cookie, otro dominio (facebook.com) no podrá acceder a ella a través del navegador. La razón de ello es que muchas veces podremos almacenar datos importantes como usuarios/contraseñas en las cookies, y no queremos que otros dominios puedan consultarlos. La mayor parte de las veces, cuando almacenamos datos de este tipo, estarán encriptados dentro de la cookie.
 {:.prompt-info}
 
 {:.question}
@@ -69,6 +69,18 @@ Un fichero de cookies es un fichero de texto. El formato de almacenamiento de lo
 
 > **Las cookies tendrán una fecha de caducidad**, ya que algunos navegadores tienen limitado el número máximo de cookies que pueden almacenar (1000 en Firefox). Será el propio navegador el encargado de borrar las cookies caducadas.
 {:.prompt-info}
+
+## Primer ejemplo
+
+```javascript
+document.cookie = "username=John Doe; expires=Thu, 18 Dec 2021 12:00:00 UTC; path=/;";
+```
+
+En este ejemplo:
+
+- Creamos una cookie llamada `username` con el valor John Doe.
+- Establecemos una fecha de expiración para la cookie.
+- Definimos el `path` para especificar la ruta en la que la cookie está disponible.
 
 Mira el vídeo:
 
@@ -86,6 +98,20 @@ Preguntas a responder tras la visualización del vídeo:
 
 {:.section}
 ## Gestión y uso de cookies
+
+```javascript
+var x = document.cookie;  // Leer todas las cookies
+document.cookie = "username=John Smith; expires=Thu, 18 Dec 2021 12:00:00 UTC; path=/;";  // Modificar una cookie
+document.cookie = "username=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";  // Borrar una cookie
+```
+
+En este ejemplo:
+
+- Leemos todas las cookies disponibles.
+- Modificamos la cookie `username`.
+- Borramos la cookie `username` estableciendo una fecha de expiración pasada.
+
+Para una gestión más avanzada de cookies, se recomienda utilizar las funciones proporcionadas por la [W3C: W3Schools - Cookies](https://www.w3schools.com/js/js_cookies.asp).
 
 Mira el vídeo:
 
@@ -112,3 +138,4 @@ Preguntas a responder tras la visualización del vídeo:
 ## Bibliografía
 
 - <https://github.com/statickidz/TemarioDAW/tree/master/DWEC>
+- <https://xxjcaxx.github.io/libro_dwec/ajax.html#manipular-cookies>
