--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -1,10 +1,13 @@
 ---
 title: "Vue"
-date: 2025-03-08 9:00:00 +0100
+date: 2025-03-10 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Web, Desarrollo Web en Entorno Cliente]
 tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de aplicaciones web, desarrollo web en entorno cliente, dwec]
 img_path: /assets/img/vue/
 ---
+
+> Artículo en construcción.
+{:.prompt-warning}
 
 ## Introducción
 
