--- a/_posts/2025-02-15-tarea-dom.md
+++ b/_posts/2025-02-15-tarea-dom.md
@@ -141,7 +141,7 @@ Desarrolla un pequeño juego del Bingo con un solo cartón.
 1. Cuando se tachen todos los números el juego finaliza.
 
 {:.activity}
-### Otro aplicación o juego
+### Otra aplicación o juego
 
 Si quieres hacer otra aplicación u otro juego en HTML, CSS y JavaScript deberá ser aprobado por el profesor.
 
