--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -6,9 +6,6 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/vue/
 ---
 
-> Artículo en construcción.
-{:.prompt-warning}
-
 ## Introducción
 
 El uso de un framework nos facilita enormemente el trabajo a la hora de crear una aplicación. Vue.js es un framework de JavaScript utilizado para crear interfaces de usuario (UI) y aplicaciones web de una manera reactiva y eficiente. Vue se destaca por su facilidad de integración y su enfoque en el rendimiento y la simplicidad.
@@ -26,21 +23,56 @@ Mira el siguiente video:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nhBVL41-_Cw?si=AJdSU_bBAlYkeqfT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-> Recuerda que puedes poner subtítulos en inglés y en español
+> Recuerda que puedes poner subtítulos en inglés y en español si lo necesitas.
 {:.prompt-info}
 
-## Getting started
+## Traducir páginas
 
-La forma más rápida y segura de empezar con Vue es seguir el [Quick Start de la documentación oficial de Vue](https://vuejs.org/guide/quick-start.html). No hay versión en español, pero si tienes dificultades con el inglés te recomiendo usar la extensión de DeepL con el que obtendrás mejores traducciones que con Google Translate.
+Si no controlas mucho el inglés siempre puedes usar la extensión de DeepL para traducir textos. Con DeepL obtendrás mejores traducciones que con Google Translate.
 
 ![Traducción con la extensión de DeepL](traduccionConDeepl.gif)
 _Traducción con la extensión de DeepL_
+
+## ¿Qué hace Vue?
+
+Si quieres conocer las principales características que proporciona Vue te recomiendo que hagas sigas el [tutorial oficial de Vue](https://vuejs.org/tutorial/#step-1). He preparado el artículo [Tutorial: Vue](/posts/tutorial-vue) donde he traducido todo el tutorial con DeepL.
+
+{:.question}
+¿Qué diferencia hay entre un framework y una librería?
+
+## Getting started en inglés
+
+La forma más segura y actualizada de empezar con Vue es seguir el [Quick Start de la documentación oficial de Vue](https://vuejs.org/guide/quick-start.html). Por el momento no hay versión en español.
+
+## Getting started en español
+
+Si prefieres leer la teoría directamente en español te dejo el índice con enlaces a diferentes artículos para que puedas acceder directamente:
+
+> Este material fue actualizado en enero de 2025.
+{:.prompt-info}
+
+1. [Conceptos básicos](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/01-basics)
+2. [Directivas](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/02-directivas)
+3. [Componentes](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/03-componentes)
+   1. [SFC](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/03_1-sfc) 🔥
+   2. [Comunicación entre componentes](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/03_2-comunicar_componentes)
+4. [Peticiones Ajax: axios](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/04-axios)
+   - NOTA: Ya no es tan necesario usar axios. Se puede sustituir por `fetch`.
+5. [SPA: vue-router](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/05-vue-router)
+6. [Profundizando en Vue](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/06-profundizando)
+7. [Pinia](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/07-pinia)
+   - NOTA: para Vue 2 consultar [Vuex](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/07-vuex)
+8. [Formularios](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/08-forms)
+9. [Typescript](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/21-typescript)
+10. [Testeando componentes](https://vuejs.org/guide/scaling-up/testing)
+11. [Y más...](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/09-cosas)
+12. [Composition API](https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/10-vue3_composition_api)
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué es Vite?</summary>
   <div class="card-body" markdown="1">
 
-Vite es un _construidor_ y servidor de desarrollo frontend ultrarrápido. Su objetivo es mejorar la experiencia de desarrollo con tiempos de inicio casi instantáneos y una recarga en caliente súper rápida.
+Vite es un constructor y servidor de desarrollo frontend ultrarrápido. Su objetivo es mejorar la experiencia de desarrollo con tiempos de inicio casi instantáneos y una recarga en caliente súper rápida.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
