--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -171,6 +171,7 @@ Las herramientas que existen para la evaluación de la accesibilidad son:
 
 ## Bibliografía
 
+- [Ministerio de Educación y Formación Profesional](https://www.educacionyfp.gob.es/portada.html)
 - <http://codexexempla.org/curso/curso_4_5.php>
 - <https://wave.webaim.org/>
 - <https://idrc.ocadu.ca/>
