--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -22,6 +22,9 @@ Pero también incluye estándares centrados en la accesibilidad:
 
 Nos centraremos en este último en su versión 2.0.
 
+> Actualmente, la versión mas reciente de WCAG es la 2.2.
+{:.prompt-info}
+
 ## WCAG 2.0
 
 La Iniciativa para la Accesibilidad Web (WAI) es una iniciativa que desarrolla estrategias, directrices y recursos para ayudar a hacer la Web accesible a las personas con discapacidad. Concretamente, la WAI desarrolla las Directrices de Accesibilidad para el Contenido Web (WCAG).
