--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -18,7 +18,7 @@ Entre los estándares creados por este consorcio destacan:
 
 Pero también incluye estándares centrados en la accesibilidad:
 
-- **WCAG**: Directrices para crear interfaces accesibles para personas con discapacidad.
+- **WCAG (Web Content Accessibility Guidelines)**: Directrices para crear interfaces accesibles para personas con discapacidad.
 
 Nos centraremos en este último en su versión 2.0.
 
@@ -29,7 +29,7 @@ Nos centraremos en este último en su versión 2.0.
 
 La Iniciativa para la Accesibilidad Web (WAI) es una iniciativa que desarrolla estrategias, directrices y recursos para ayudar a hacer la Web accesible a las personas con discapacidad. Concretamente, la WAI desarrolla las Directrices de Accesibilidad para el Contenido Web (WCAG).
 
-Las WCAG 2.0 se han diseñado para ser aplicadas a una amplia gama de tecnologías Web ahora y en el futuro, y para ser verificables con una combinación de pruebas automatizadas y de evaluación humana.
+Las WCAG 2.0 (Web Content Accessibility Guidelines) se han diseñado para ser aplicadas a una amplia gama de tecnologías Web ahora y en el futuro, y para ser verificables con una combinación de pruebas automatizadas y de evaluación humana.
 
 Las directrices o pautas y los criterios de éxito se basan cuatro principios:
 
@@ -92,6 +92,8 @@ Para cada pauta se proporcionan los criterios de éxito verificables que permite
 - **Nivel AA**: Para lograr conformidad con el nivel AA, la página web satisface todos los criterios de éxito de los niveles A y AA, o se proporciona una versión alternativa conforme al nivel AA.
 - **Nivel AAA**: Para lograr conformidad con el nivel AAA, la página web satisface todos los criterios de éxito de los niveles A, AA y AAA, o proporciona una versión alternativa conforme al nivel AAA.
 
+![Niveles de conformidad de las WCAG](WCAG-levels-captioning.png)
+
 <details class="card mb-2">
   <summary class="card-header question">¿Para lograr conformidad con el nivel AAA, la página web debe satisfacer únicamente todos los criterios de éxito del nivel AAA?</summary>
   <div class="card-body" markdown="1">
@@ -134,6 +136,9 @@ Las personas sordas o con problemas de audición, pueden leer el texto alternati
 Las personas sordo ciegas pueden leer el texto en braille.
 
 > (Voluntario) Si quieres conocer todos los 61 criterios de conformidad puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
+{:.prompt-info}
+
+> (Voluntario) Si quieres conocer todos los criterios de conformidad de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
 {:.prompt-info}
 
 ## Técnicas de accesibilidad
@@ -180,3 +185,4 @@ Las herramientas que existen para la evaluación de la accesibilidad son:
 - <https://idrc.ocadu.ca/>
 - <https://www.w3.org/WAI/standards-guidelines/wcag/es>
 - <https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0>
+- <https://addaw.org/es/wcag>
