--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -135,7 +135,7 @@ Las personas sordas o con problemas de audición, pueden leer el texto alternati
 
 Las personas sordo ciegas pueden leer el texto en braille.
 
-> (Voluntario) Si quieres conocer todos los 61 criterios de conformidad puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
+> (Voluntario) Si quieres conocer todos los 61 criterios de conformidad de la WCAG 2.0 puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
 {:.prompt-info}
 
 > (Voluntario) Si quieres conocer todos los criterios de conformidad de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
