Añado secciones a los últimos artículos

--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/vue/
 ---
 
+{:.section}
 ## Introducción
 
 El uso de un framework nos facilita enormemente el trabajo a la hora de crear una aplicación. Vue.js es un framework de JavaScript utilizado para crear interfaces de usuario (UI) y aplicaciones web de una manera reactiva y eficiente. Vue se destaca por su facilidad de integración y su enfoque en el rendimiento y la simplicidad.
@@ -26,6 +27,7 @@ Mira el siguiente video:
 > Recuerda que puedes poner subtítulos en inglés y en español si lo necesitas.
 {:.prompt-info}
 
+{:.section}
 ## Traducir páginas
 
 Si no controlas mucho el inglés siempre puedes usar la extensión de DeepL para traducir textos. Con DeepL obtendrás mejores traducciones que con Google Translate.
@@ -33,6 +35,7 @@ Si no controlas mucho el inglés siempre puedes usar la extensión de DeepL para
 ![Traducción con la extensión de DeepL](traduccionConDeepl.gif)
 _Traducción con la extensión de DeepL_
 
+{:.section}
 ## ¿Qué hace Vue?
 
 Si quieres conocer las principales características que proporciona Vue te recomiendo que hagas sigas el [tutorial oficial de Vue](https://vuejs.org/tutorial/#step-1). He preparado el artículo [Tutorial: Vue](/posts/tutorial-vue) donde he traducido todo el tutorial con DeepL.
@@ -40,10 +43,12 @@ Si quieres conocer las principales características que proporciona Vue te recom
 {:.question}
 ¿Qué diferencia hay entre un framework y una librería?
 
+{:.section}
 ## Getting started en inglés
 
 La forma más segura y actualizada de empezar con Vue es seguir el [Quick Start de la documentación oficial de Vue](https://vuejs.org/guide/quick-start.html). Por el momento no hay versión en español.
 
+{:.section}
 ## Getting started en español
 
 Si prefieres leer la teoría directamente en español te dejo el índice con enlaces a diferentes artículos para que puedas acceder directamente:
