--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/wcag/
 ---
 
+{:.section}
 ## Introducción
 
 El W3C (World Wide Web Consortium) es una comunidad internacional que desarrolla estándares que aseguran el crecimiento de la Web a largo plazo.
@@ -25,6 +26,7 @@ Nos centraremos en este último en su versión 2.0.
 > Actualmente, la versión mas reciente de WCAG es la 2.2.
 {:.prompt-info}
 
+{:.section}
 ## WCAG 2.0
 
 La Iniciativa para la Accesibilidad Web (WAI) es una iniciativa que desarrolla estrategias, directrices y recursos para ayudar a hacer la Web accesible a las personas con discapacidad. Concretamente, la WAI desarrolla las Directrices de Accesibilidad para el Contenido Web (WCAG).
@@ -59,6 +61,7 @@ Desarrollar especificaciones y Desarrollar líneas maestras.
   </div>
 </details>
 
+{:.section}
 ## Pautas de accesibilidad de las WCAG 2.0
 
 Las Pautas de Accesibilidad para el Contenido Web definen cómo crear contenidos web más accesibles para las personas con discapacidad.
@@ -84,6 +87,7 @@ Las WCAG 2.0 tienen 12 pautas que se organizan en los cuatro principios que cons
 1. **Robustez**
    1. Maximizar la compatibilidad con los agentes de usuario actuales y futuros, incluyendo las tecnologías asistivas.
 
+{:.section}
 ## Niveles de conformidad de las WCAG 2.0
 
 Para cada pauta se proporcionan los criterios de éxito verificables que permiten emplear las WCAG 2.0 en aquellas situaciones en las que existan requisitos y necesidad de evaluación de conformidad. Existen tres niveles:
@@ -104,6 +108,7 @@ No. Lograr un nivel superior implica haber logrado los niveles anteriores.
   </div>
 </details>
 
+{:.section}
 ## Criterios de conformidad de la WCAG 2.0
 
 Cada pauta de accesibilidad tiene de uno a diez criterios de éxito.
@@ -114,6 +119,7 @@ Cada criterio de éxito incluye su intención, los términos clave que se utiliz
 
 Cada criterio de éxito tiene asociado un único nivel: A, AA o AAA.
 
+{:.subsection}
 ### Ejemplo de criterio de conformidad
 
 **Principio 1. Perceptibilidad > Pauta 1. Alternativas textuales > Criterio de conformidad 1. Contenido no textual (Nivel A)**
@@ -141,12 +147,14 @@ Las personas sordo ciegas pueden leer el texto en braille.
 > (Voluntario) Si quieres conocer todos los criterios de conformidad de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
 {:.prompt-info}
 
+{:.section}
 ## Técnicas de accesibilidad
 
 Para cada uno criterios de conformidad, el grupo de trabajo de las WCAG 2.0 ha documentado también una amplia variedad de técnicas.
 
 (Voluntario) En el artículo [Techniques and Failures for Web Content Accessibility Guidelines 2.0](https://www.w3.org/TR/2010/NOTE-WCAG20-TECHS-20101014/complete.html#G1)n tienes descritas las 375 técnicas en inglés.
 
+{:.section}
 ## Declaración de conformidad de documentos Web
 
 Una declaración de conformidad de una página web conforme con las WCAG 2.0 (Web Content Accessibility Guidelines 2.0) es un documento (generalmente público) en el que el responsable del sitio web afirma que este cumple con los requisitos de accesibilidad establecidos en las WCAG 2.0.
@@ -160,6 +168,7 @@ La declaración de conformidad deberá satisfacer los siguientes requisitos:
 1. Fecha de la última revisión.
 1. Información de contacto.
 
+{:.section}
 ## Herramientas de evaluación de la accesibilidad
 
 Normalmente, el proceso de evaluación de la Accesibilidad del contenido Web que consta de dos fases:
