--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -155,6 +155,41 @@ Para cada uno criterios de conformidad, el grupo de trabajo de las WCAG 2.0 ha d
 (Voluntario) En el artículo [Techniques and Failures for Web Content Accessibility Guidelines 2.0](https://www.w3.org/TR/2010/NOTE-WCAG20-TECHS-20101014/complete.html#G1)n tienes descritas las 375 técnicas en inglés.
 
 {:.section}
+## Checklists sobre accesibilidad
+
+A continuación se muestran varios checklists que recogen todos los recursos de la actual WCAG 2.2 traducidos al español y con ejemplos visuales.
+
+> Los checklist se han obtenido de la [comunidad de Figma](https://www.figma.com/community/file/1459257678878721186).
+{:.prompt-info}
+
+![Tipografía y textos](Tipografía y textos_accesibilidad.svg)
+_Tipografía y textos_
+
+![Color y contraste](Color y contraste_accesibilidad.svg)
+_Color y contraste_
+
+![Botones y enlaces](Botones y enlaces_accesibilidad.svg)
+_Botones y enlaces_
+
+![Texto alternativo](Texto alternativo_accesibilidad.svg)
+_Texto alternativo_
+
+![Contenido dinámico](Contenido dinámico_accesibilidad.svg)
+_Contenido dinámico_
+
+![Navegación e interacción_accesibilidad](Navegación e interacción_accesibilidad.svg)
+_Navegación e interacción_accesibilidad_
+
+![Asistencia de entrada](Asistencia de entrada_accesibilidad.svg)
+_Asistencia de entrada_
+
+![Básicos de desarrollo](Básicos de desarrollo_accesibilidad.svg)
+_Básicos de desarrollo_
+
+![Formularios](Formularios_accesibilidad.svg)
+_Formularios_
+
+{:.section}
 ## Declaración de conformidad de documentos Web
 
 Una declaración de conformidad de una página web conforme con las WCAG 2.0 (Web Content Accessibility Guidelines 2.0) es un documento (generalmente público) en el que el responsable del sitio web afirma que este cumple con los requisitos de accesibilidad establecidos en las WCAG 2.0.
@@ -167,6 +202,7 @@ La declaración de conformidad deberá satisfacer los siguientes requisitos:
 1. Método de verificación: Interna, externa. Con uso de herramientas automáticas + manuales o solo manuales.
 1. Fecha de la última revisión.
 1. Información de contacto.
+
 
 {:.section}
 ## Herramientas de evaluación de la accesibilidad
@@ -195,3 +231,4 @@ Las herramientas que existen para la evaluación de la accesibilidad son:
 - <https://www.w3.org/WAI/standards-guidelines/wcag/es>
 - <https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0>
 - <https://addaw.org/es/wcag>
+- <https://www.figma.com/community/file/1459257678878721186>
