--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -109,7 +109,7 @@ No. Lograr un nivel superior implica haber logrado los niveles anteriores.
 </details>
 
 {:.section}
-## Criterios de conformidad de la WCAG 2.0
+## criterios de éxito de la WCAG 2.0
 
 Cada pauta de accesibilidad tiene de uno a diez criterios de éxito.
 
@@ -141,16 +141,16 @@ Las personas sordas o con problemas de audición, pueden leer el texto alternati
 
 Las personas sordo ciegas pueden leer el texto en braille.
 
-> (Voluntario) Si quieres conocer todos los 61 criterios de conformidad de la WCAG 2.0 puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
+> (Voluntario) Si quieres conocer todos los 61 criterios de éxito de la WCAG 2.0 puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
 {:.prompt-info}
 
-> (Voluntario) Si quieres conocer todos los criterios de conformidad de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
+> (Voluntario) Si quieres conocer todos los criterios de éxito de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
 {:.prompt-info}
 
 {:.section}
 ## Técnicas de accesibilidad
 
-Para cada uno criterios de conformidad, el grupo de trabajo de las WCAG 2.0 ha documentado también una amplia variedad de técnicas.
+Para cada uno criterios de éxito, el grupo de trabajo de las WCAG 2.0 ha documentado también una amplia variedad de técnicas.
 
 (Voluntario) En el artículo [Techniques and Failures for Web Content Accessibility Guidelines 2.0](https://www.w3.org/TR/2010/NOTE-WCAG20-TECHS-20101014/complete.html#G1)n tienes descritas las 375 técnicas en inglés.
 
