--- a/_posts/2025-04-05-wcag.md
+++ b/_posts/2025-04-05-wcag.md
@@ -109,7 +109,7 @@ No. Lograr un nivel superior implica haber logrado los niveles anteriores.
 </details>
 
 {:.section}
-## criterios de éxito de la WCAG 2.0
+## Criterios de éxito de la WCAG 2.0
 
 Cada pauta de accesibilidad tiene de uno a diez criterios de éxito.
 
@@ -120,9 +120,9 @@ Cada criterio de éxito incluye su intención, los términos clave que se utiliz
 Cada criterio de éxito tiene asociado un único nivel: A, AA o AAA.
 
 {:.subsection}
-### Ejemplo de criterio de conformidad
+### Ejemplo de criterio de éxito
 
-**Principio 1. Perceptibilidad > Pauta 1. Alternativas textuales > Criterio de conformidad 1. Contenido no textual (Nivel A)**
+**Principio 1. Perceptibilidad > Pauta 1. Alternativas textuales > Criterio de éxito 1. Contenido no textual (Nivel A)**
 
 La intención de este criterio de éxito es hacer que la información transmitida por los contenidos no textuales sea accesible a través del uso de un texto alternativo.
 
@@ -141,11 +141,28 @@ Las personas sordas o con problemas de audición, pueden leer el texto alternati
 
 Las personas sordo ciegas pueden leer el texto en braille.
 
+> (Voluntario) Si quieres conocer todos los criterios de éxito de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
+{:.prompt-info}
+
+{:.section}
+## Criterios de conformidad
+
+Son reglas generales que determinan si una página o sitio web puede declararse conforme a un nivel específico de accesibilidad (A, AA o AAA).
+
+No son técnicas individuales, sino requisitos globales que afectan a todo el contenido.
+
 > (Voluntario) Si quieres conocer todos los 61 criterios de éxito de la WCAG 2.0 puedes leer el artículo [Criterios de conformidad de WCAG 2.0](https://accesibilidadweb.dlsi.ua.es/?menu=criterios-2.0).
 {:.prompt-info}
 
-> (Voluntario) Si quieres conocer todos los criterios de éxito de la WCAG 2.2 EN DETALLE, puedes leer el artículo [WCAG 2.2](https://addaw.org/es/wcag).
-{:.prompt-info}
+<details class="card mb-2">
+  <summary class="card-header question">¿Es lo mismo un criterio de éxito que un criterio de conformidad?</summary>
+  <div class="card-body" markdown="1">
+
+No. Los criterios de éxito son requisitos técnicos específicos para cada pauta y los criterios de conformidad son requisitos generales para declarar la accesibilidad de una página.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.section}
 ## Técnicas de accesibilidad
