--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -93,6 +93,62 @@ El scaffold (o scaffolding) es una técnica que permite generar automáticamente
   </div>
 </details>
 
+## Comparativa entre Vue y Blade
+
+Se va a hacer una comparativa entre Vue y Blade. Realmente la comparativa sería exactamente igual si cambiamos Blade con cualquier sistema de plantillas de backend (como JSP o Thymeleaf) y Vue con cualquier librearía para realizar SPAs (como React o Angular).
+
+| Característica | Blade (Laravel) | Vue (SPA o híbrida) |
+|---|---|---|
+| Renderizado | Del lado del servidor (SSR) | Del lado del cliente (CSR), aunque admite SSR |
+| Velocidad de carga inicial | Rápida (HTML directo) | Más lenta (JS necesita cargar primero) |
+| Interactividad | Limitada (necesita JS externo) | Alta (reactivo, dinámico, componentes) |
+| SEO | Excelente (HTML servido por Laravel) | Regular (salvo si usas SSR con Nuxt o similares) |
+| Experiencia de usuario | Tradicional | Moderna y fluida (tipo app) |
+| Curva de aprendizaje | Baja (si ya sabes PHP) | Media (requieres JS moderno, build tools...) |
+| Escalabilidad | Menos flexible para apps complejas | Muy flexible para apps complejas |
+| Desarrollo full-stack | Laravel controla todo (muy integrado) | Separa backend (Laravel) y frontend (Vue) |
+
+Como se puede ver, las únicas desventajas de Vue sobre Blade son la curva de aprendizaje y el SEO. La parte del SEO se puede solucionar con Nuxt en el caso de Vue.
+
+La principal ventaja de utilizar librerías como Vue es que se separa el backend del frontend, por lo que puede sería mucho más sencillo implementar una aplicación Android ya que podríamos reutilizar todo el backend sin modificación alguna.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Laravel implementa el MVC (Modelo Vista Contorlador)?</summary>
+  <div class="card-body" markdown="1">
+
+Si.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Vue implementa el MVC?</summary>
+  <div class="card-body" markdown="1">
+
+No. Por defecto Vue sigue una arquitectura orientada a componentes. Los principios del MVC siguen aplicándose pero de una forma diferente.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es una arquitectura en el desarrollo de software?</summary>
+  <div class="card-body" markdown="1">
+
+Una arquitectura define cómo se organizan los ficheros y carpetas de una aplicación. Una arquitectura define:
+
+- Como se mueve la información dentro del sistema. Es decir, como se comunican los diferentes componentes entre sí.
+- Qué responsabilidad tiene cada parte del sistema.
+
+El objetivo final de una arquitectura es que el código sea mantenible. Esto quiere decir que conforme crezca el proyecto un fichero no ocupe miles y miles de líneas de código.
+
+Al usar un framework ya se nos "fuerza" a usar una estructura de carpetas inicial prefijada por alguien más inteligente que nosotros por lo que tampoco es algo que nos deba preocupar demasiado. Aunque nunca está de más entender por qué hacemos las cosas como las hacemos.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 ## Bibliografía
 
 - <https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/>
