--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -149,6 +149,16 @@ Al usar un framework ya se nos "fuerza" a usar una estructura de carpetas inicia
   </div>
 </details>
 
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es Vite?</summary>
+  <div class="card-body" markdown="1">
+
+Vite es una herramienta moderna de desarrollo frontend que sirve para crear, compilar y optimizar aplicaciones web.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 ## Bibliografía
 
 - <https://cipfpbatoi.github.io/materials/daw/dwc/02-vue/>
