--- a/_posts/2025-03-10-vue.md
+++ b/_posts/2025-03-10-vue.md
@@ -44,6 +44,11 @@ Si quieres conocer las principales características que proporciona Vue te recom
 ¿Qué diferencia hay entre un framework y una librería?
 
 {:.section}
+## Introducción a componentes Vue
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PW9OWPn5-Bg?si=E8R1XDzh6pgjtU0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+{:.section}
 ## Getting started en inglés
 
 La forma más segura y actualizada de empezar con Vue es seguir el [Quick Start de la documentación oficial de Vue](https://vuejs.org/guide/quick-start.html). Por el momento no hay versión en español.
